Fixes Safari layout issue on About > Versions

--- a/src/css/modules/pages/about.css
+++ b/src/css/modules/pages/about.css
@@ -145,7 +145,7 @@
 }
 
 .version__img {
-  display: flex;
+  display: block;
   position: relative;
 }
 
@@ -162,9 +162,10 @@
   z-index: 2;
 }
 
-.version img {
+.version__img img {
   border-radius: 6px;
   display: block;
+  height: auto;
   width: 100%;
 }
 
